--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       # run build script
-      - npm run build
+      - npm run deploy
 
 artifacts:
   # include all files required to run application
