--- a/appspec.yml
+++ b/appspec.yml
@@ -2,12 +2,8 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/moho-fe
+    destination: /var/www/moho-fe/
 hooks:
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
-      runas: ubuntu
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
