--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,14 @@ files:
   - source: /
     destination: /var/www/moho-fe/
 hooks:
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 300
+      runas: ubuntu
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ubuntu
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
